--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-     "start": "ng serve dev",
+    "start": "ng serve --host 0.0.0.0 --port 8080 --proxy-config proxy.conf.json ",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,6 +20,12 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@fortawesome/fontawesome-free": "^5.13.1",
+    "@types/chart.js": "^2.9.22",
+    "angular-bootstrap-md": "^9.3.1",
+    "animate.css": "^4.1.0",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
     "moment": "^2.27.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
